--- a/cf/i18n/resources/ja-jp.untranslated.json
+++ b/cf/i18n/resources/ja-jp.untranslated.json
@@ -1886,5 +1886,9 @@
   {
     "id": "{{.CFName}} login",
     "translation": "{{.CFName}} login"
+  },
+  {
+    "id": "{{.Message}}\nNote that this command requires CF API version 3.0.0+.",
+    "translation": ""
   }
 ]
