--- a/cf/i18n/resources/es-es.all.json
+++ b/cf/i18n/resources/es-es.all.json
@@ -3472,6 +3472,14 @@
     "translation": "Invitar y gestionar usuarios, seleccionar y cambiar planes, y establecer los límites de gasto\n"
   },
   {
+    "id": "Job ({{.JobGUID}}) failed: {{.Message}}",
+    "translation": ""
+  },
+  {
+    "id": "Job ({{.JobGUID}}) polling timeout has been reached. The operation may still be running on the CF instance, please contact your operator for more information.",
+    "translation": ""
+  },
+  {
     "id": "Last Operation",
     "translation": "Última operación"
   },
