--- a/cf/i18n/resources/pt-br.untranslated.json
+++ b/cf/i18n/resources/pt-br.untranslated.json
@@ -1324,6 +1324,10 @@
     "translation": "OK"
   },
   {
+    "id": "One-time password",
+    "translation": "One-time password"
+  },
+  {
     "id": "Option '--app-ports'",
     "translation": "Option '--app-ports'"
   },
