--- a/cf/i18n/resources/it-it.untranslated.json
+++ b/cf/i18n/resources/it-it.untranslated.json
@@ -856,6 +856,10 @@
     "translation": "OK"
   },
   {
+    "id": "One-time password",
+    "translation": "One-time password"
+  },
+  {
     "id": "Option '--app-ports'",
     "translation": "Option '--app-ports'"
   },
