--- a/cf/i18n/resources/ko-kr.untranslated.json
+++ b/cf/i18n/resources/ko-kr.untranslated.json
@@ -1304,6 +1304,10 @@
     "translation": "Not supported on windows"
   },
   {
+    "id": "One-time password",
+    "translation": "One-time password"
+  },
+  {
     "id": "Option '--app-ports'",
     "translation": "Option '--app-ports'"
   },
