--- a/cf/i18n/resources/pt-br.all.json
+++ b/cf/i18n/resources/pt-br.all.json
@@ -3992,6 +3992,10 @@
     "translation": "ORGANIZAÇÕES:"
   },
   {
+    "id": "One-time password",
+    "translation": ""
+  },
+  {
     "id": "Option '--app-ports'",
     "translation": ""
   },
