add task name to run-task output
[finishes #136595585]

--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -1500,11 +1500,11 @@
     "translation": "Tags: {{.Tags}}"
   },
   {
-    "id": "Task workers are unavailable.",
-    "translation": ""
+    "id": "Task has been submitted successfully for execution.\nTask name:   {{.TaskName}}\nTask id:     {{.TaskSequenceID}}",
+    "translation": "Task has been submitted successfully for execution.\nTask name:   {{.TaskName}}\nTask id:     {{.TaskSequenceID}}"
   },
   {
-    "id": "Task {{.TaskSequenceID}} has been submitted successfully for execution.",
+    "id": "Task workers are unavailable.",
     "translation": ""
   },
   {
