--- a/cf/i18n/resources/es-es.untranslated.json
+++ b/cf/i18n/resources/es-es.untranslated.json
@@ -1508,11 +1508,11 @@
     "translation": "TOTAL_MEMORY"
   },
   {
-    "id": "Task workers are unavailable.",
-    "translation": ""
+    "id": "Task has been submitted successfully for execution.\nTask name:   {{.TaskName}}\nTask id:     {{.TaskSequenceID}}",
+    "translation": "Task has been submitted successfully for execution.\nTask name:   {{.TaskName}}\nTask id:     {{.TaskSequenceID}}"
   },
   {
-    "id": "Task {{.TaskSequenceID}} has been submitted successfully for execution.",
+    "id": "Task workers are unavailable.",
     "translation": ""
   },
   {
