--- a/cf/i18n/resources/ja-jp.all.json
+++ b/cf/i18n/resources/ja-jp.all.json
@@ -5088,11 +5088,11 @@
     "translation": "スペース {{.SpaceName}} をターゲットにしました\n"
   },
   {
-    "id": "Task workers are unavailable.",
+    "id": "Task has been submitted successfully for execution.\nTask name:   {{.TaskName}}\nTask id:     {{.TaskSequenceID}}",
     "translation": ""
   },
   {
-    "id": "Task {{.TaskSequenceID}} has been submitted successfully for execution.",
+    "id": "Task workers are unavailable.",
     "translation": ""
   },
   {
