integration tests check stderr for failure messages
[#126256621]

Signed-off-by: Nick Wei <nwei@pivotal.io>

--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -5536,6 +5536,10 @@
     "translation": "USERS"
   },
   {
+    "id": "Unable to access space '{{.SpaceName}}'.\n{{.APIErr}}",
+    "translation": ""
+  },
+  {
     "id": "Unable to access space {{.SpaceName}}.\n{{.APIErr}}",
     "translation": "Unable to access space {{.SpaceName}}.\n{{.APIErr}}"
   },
