--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -5536,6 +5536,10 @@
     "translation": "BENUTZER"
   },
   {
+    "id": "Unable to access space '{{.SpaceName}}'.\n{{.APIErr}}",
+    "translation": ""
+  },
+  {
     "id": "Unable to access space {{.SpaceName}}.\n{{.APIErr}}",
     "translation": "Auf Bereich {{.SpaceName}} konnte nicht zugegriffen werden.\n{{.APIErr}}"
   },
