--- a/cf/i18n/resources/es-es.untranslated.json
+++ b/cf/i18n/resources/es-es.untranslated.json
@@ -1824,6 +1824,10 @@
     "translation": "URL"
   },
   {
+    "id": "Unable to access space '{{.SpaceName}}'.\n{{.APIErr}}",
+    "translation": ""
+  },
+  {
     "id": "Unable to retrieve information for bound application GUID ",
     "translation": "Unable to retrieve information for bound application GUID "
   },
