--- a/cf/i18n/resources/fr-fr.all.json
+++ b/cf/i18n/resources/fr-fr.all.json
@@ -5536,6 +5536,10 @@
     "translation": "UTILISATEURS"
   },
   {
+    "id": "Unable to access space '{{.SpaceName}}'.\n{{.APIErr}}",
+    "translation": ""
+  },
+  {
     "id": "Unable to access space {{.SpaceName}}.\n{{.APIErr}}",
     "translation": "Impossible d'accéder à l'espace {{.SpaceName}}.\n{{.APIErr}}"
   },
