--- a/cf/i18n/resources/fr-fr.untranslated.json
+++ b/cf/i18n/resources/fr-fr.untranslated.json
@@ -1352,6 +1352,10 @@
     "translation": ""
   },
   {
+    "id": "Unable to access space '{{.SpaceName}}'.\n{{.APIErr}}",
+    "translation": ""
+  },
+  {
     "id": "Unable to retrieve information for bound application GUID ",
     "translation": "Unable to retrieve information for bound application GUID "
   },
